# exalta-launcher

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  run-steam.sh  shell.nix
.cargo/: config.toml
exalta_core/: .gitignore  Cargo.toml
exalta_core/src/: config.rs  lib.rs  misc.rs
exalta_core/src/auth/: account.rs  err.rs  mod.rs  steamworks.rs
exalta_core/src/download/: checksumfiles.rs  err.rs  mod.rs
exalta_core/tests/: .env.example  auth.rs  download.rs
src/: account.rs  args.rs  cli.rs  config.rs  launchargs.rs  login.rs  main.rs  main_ext.rs  play.rs  registries.rs  steam.rs  update.rs
src/config/: gui.rs  mod.rs
src/pages/: login.rs  mod.rs  play.rs
src/pages/config/: gui.rs  mod.rs
