[package]
name = "exalta"
version = "0.4.0"
edition = "2021"
default-run = "exalta"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]

[features]

[dependencies]
eframe = "0.18.0"

tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
poll-promise = { version = "0.1" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13"
regex = "1"

directories = "4.0"
clap = { version = "3.2.3", features = ["derive"] }

exalta_core = { path = "exalta_core" }

keyring = "1"
steamworks = { version = "0.9" }

[target.'cfg(windows)'.dependencies]
winreg = "0.10.1"

[[bin]]
name = "exalta"
path = "src/main.rs"

[[bin]]
name = "exalta-steam"
required-features = ["steam"]
path = "src/main.rs"

[[bin]]
name = "exalta-cli"
path = "src/cli.rs"
