[package]
name = "exalta_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.12"

reqwest = { version = "0.11.0", features = ["stream"] }
tokio = { version = "1", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.23", features = [ "serialize" ] }

md5 = "0.7"

[dev-dependencies]
dotenv = "0.15"
steamworks = "0.9"